--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Equipe Alura Start</title>
+    <title>Equipe Agro Start</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,27 +14,27 @@
 
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="alurastart logo.png" alt="logo da alura start">
+        <img class="cabecalho-imagem" src="" alt="">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item"><a href="#escola">Escola</a></li>
-            <li class="cabecalho-lista-item"><a href="#estudante">Estudante</a></li>
+            <li class="cabecalho-lista-item"><a href="#escola"></a></li>
+            <li class="cabecalho-lista-item"><a href="#estudante"></a></li>
         </ul>
     </header>
     <section id="escola">
         <div class="escola-div-conteudo">
-            <h2 class="escola-titulo">Compra e Venda de Gado de Corte</h2>
-            <p class="escola-texto-um">NELORE PO.</p>
-            <p class="escola-texto-dois">Os mais Valorizados do Agronegócio</p>
+            <h2 class="escola-titulo">COMPRA E VENDA DE GADO</h2>
+            <p class="escola-texto-um">NELORE PO </p>
+            <p class="escola-texto-dois"> Os mais Valorizados do Agronegócio</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="Papeis De Parede Simples.jpeg" alt="">
     </section>
 
     <section id="estudante">
-        <h2 class="estudante-titulo"></h2>
+        <h2 class="estudante-titulo">O QUE VOCÊ PROCURA, VOCÊ ENCONTRA AQUI!</h2>
         <div class="estudante-todos">
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto do marcelo">
+                <img class="estudante-imagem" src="vaca-nelore.jpg" alt="">
                 <h3 class="estudante-nome"></h3>
                 <a href=""><img class="estudante-icone" src=""
                         alt=""></a>
@@ -44,7 +44,7 @@
                         alt=""></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da gabi">
+                <img class="estudante-imagem" src="Ceva-gado-brahman-alimentando-se-em-palete-dentro-do-confinamento.webp" alt="foto da gabi">
                 <h3 class="estudante-nome"></h3>
                 <a href=""><img class="estudante-icone" src=""
                         alt=""></a>
@@ -54,7 +54,7 @@
                         alt=""></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da lizandra">
+                <img class="estudante-imagem" src="Pecuaria_de_Corte_Recria-696x466.jpg.webp" alt="foto da lizandra">
                 <h3 class="estudante-nome"></h3>
                 <a href=""><img class="estudante-icone" src=""
                         alt=""></a>
@@ -66,7 +66,7 @@
             <span></span>
             <span></span>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da joice">
+                <img class="estudante-imagem" src="images (1).jpeg" alt="foto da joice">
                 <h3 class="estudante-nome"></h3>
                 <a href=""><img class="estudante-icone" src=""
                         alt=""></a>
@@ -76,7 +76,7 @@
                         alt=""></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da maria">
+                <img class="estudante-imagem" src="portaldbo-cvneloremocho.jpg" alt="foto da maria">
                 <h3 class="estudante-nome"></h3>
                 <a href=""><img class="estudante-icone" src=""
                         alt=""></a>
@@ -86,7 +86,7 @@
                         alt=""></a>
             </div>
             <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da olhe">
+                <img class="estudante-imagem" src="galeria_imagem2462.jpg" alt="foto da olhe">
                 <h3 class="estudante-nome"></h3>
                 <img class="estudante-icone" src="" alt="">
                 <a href=""><img class="estudante-icone" src=""
@@ -96,32 +96,14 @@
             </div>
             <span></span>
             <span></span>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da rafa">
-                <h3 class="estudante-nome"></h3>
-                <a href=""><img class="estudante-icone" src=""
-                        alt=""></a>
-                <a href=""><img class="estudante-icone"
-                        src="" alt=""></a>
-                <a href=""><img class="estudante-icone" src=""
-                        alt=''></a>
-            </div>
-            <div class="estudante-div">
-                <img class="estudante-imagem" src="" alt="foto da thais">
-                <h3 class="estudante-nome"></h3>
-                <a href=""><img class="estudante-icone" src=""
-                        alt=""></a>
-                <a href=""><img class="estudante-icone"
-                        src="" alt=""></a>
-                <a href=""><img class="estudante-icone" src=""
-                        alt=""></a>
-            </div>
+        
 
         </div>
     </section>
     
     <footer class="rodape">
-        <img class="rodape-imagem" src="" alt="">
+         <h3 class="rodape-texto">Agradecemos pela preferência</h3>
+
     </footer>
 </body>
 
